Fix chiều cao ảnh của Bộ sưu tập bằng nhau - Trang chủ / Fix lỗi Error: Text content does not match server-rendered HTML. - Trang chủ / Fix preview image - Sử dụng react-simple-image-viewer -  Trang chi tiết sản phẩm / Fix Modal xem chi tiết đơn hàng không cho scroll down hoặc scroll down khi height quá to / Dark mode nút giỏ hàng - Màu đen / Fix menu người dùng dark mode  - Text màu đen / Kiểm tra nếu sản phẩm có giá hiển thị thì đổi nút thêm vào giỏ thành liên hệ

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -315,3 +315,6 @@ span.lazy-load-image-background {
 .user:hover .menu-user{
     display: block;
 }
+#ReactSimpleImageViewer{
+    z-index: 1000;
+}
